syntax = "proto3";

package model;

option java_package = "pl.piomin.services.grpc.user.model";
option java_outer_classname = "UserProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc loginUser(google.protobuf.Empty) returns (google.protobuf.BoolValue) {}
}

message User {
  int32 id = 1;
  string login = 2;
  string password = 3;
}

